[TASK] Add dynamic DOCUMENT_ROOT
Make it possible to define the document root by a env variable.

--- a/000-default.conf
+++ b/000-default.conf
@@ -1,6 +1,6 @@
 <VirtualHost *:80>
         ServerAdmin ${SERVER_ADMIN}
-        DocumentRoot /var/www/html/typo3/public
+        DocumentRoot ${DOCUMENT_ROOT}
 
         ErrorLog ${APACHE_LOG_DIR}/error.log
         CustomLog ${APACHE_LOG_DIR}/access.log combined
