--- a/000-default.conf
+++ b/000-default.conf
@@ -7,7 +7,7 @@
 
         <Directory ${DOCUMENT_ROOT}>
                 Options Indexes FollowSymLinks MultiViews
-                AllowOverride None
+                AllowOverride All
                 Require all granted
         </Directory>
 </VirtualHost>
