--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,19 +31,19 @@ test-php:
   stage: test
   script:
     - docker pull $CONTAINER_TEST_IMAGE
-    - docker run typo3 php -v
-    - docker run typo3 composer -V
+    - docker run $CONTAINER_TEST_IMAGE php -v
 
 test-imagemagick:
   stage: test
   script:
-      - docker pull $CONTAINER_TEST_IMAGE
+    - docker pull $CONTAINER_TEST_IMAGE
+    - docker run $CONTAINER_TEST_IMAGE composer -V
 
 test-composer:
   stage: test
   script:
       - docker pull $CONTAINER_TEST_IMAGE
-      - docker run typo3 convert -version
+      - docker run $CONTAINER_TEST_IMAGE convert -version
 
 push-to-registry:
   stage: release
