[BUGFIX] Push that thing on GitHub...

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -50,14 +50,6 @@ push-to-registry:
     - docker tag $CONTAINER_TEST_IMAGE $CONTAINER_RELEASE_IMAGE
     - docker push $CONTAINER_RELEASE_IMAGE
 
-# allow failure e.g. if remote already exists
-prepare-push-on-github:
-  image: buildpack-deps:latest
-  stage: release
-  script:
-    - git remote add github git@github.com:pascal20997/docker-typo3.git
-  allow_failure: true
-
 push-on-github:
   image: buildpack-deps:latest
   stage: release
@@ -66,5 +58,6 @@ push-on-github:
     - echo "$DEPLOY_KEY" | tr -d '\r' > ~/.ssh/id_rsa
     - chmod 600 ~/.ssh/id_rsa
     - ssh-keyscan github.com >> ~/.ssh/known_hosts
-    - git push --force github master
-    - git remote remove github
+    - git config --global user.name "Crynton Runner"
+    - git config --global user.email "info@crynton.com"
+    - git push git@github.com:pascal20997/docker-typo3.git master
