--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -60,5 +60,4 @@ push-on-github:
     - ssh-keyscan github.com >> ~/.ssh/known_hosts
     - git config --global user.name "Crynton Runner"
     - git config --global user.email "info@crynton.com"
-    - git checkout master
-    - git push --force git@github.com:pascal20997/docker-typo3.git master
+    - git push git@github.com:pascal20997/docker-typo3.git $CI_COMMIT_REF_NAME:master
