--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,15 +4,15 @@ stages:
   - build
   - test
   - release
-  - clean
 
 # When using dind, it's wise to use the overlayfs driver for
 # improved performance.
 variables:
   DOCKER_DRIVER: overlay2
   DOCKER_REGISTRY: docker-registry.crynton.com
-  CONTAINER_TEST_IMAGE: docker-registry.crynton.com/docker/typo3:test-$CI_COMMIT_REF_SLUG
-  CONTAINER_RELEASE_IMAGE: docker-registry.crynton.com/docker/typo3
+  CONTAINER_TEST_IMAGE: docker-registry.crynton.com/docker/typo3:commit-$CI_COMMIT_SHA
+  CONTAINER_LATEST_IMAGE: docker-registry.crynton.com/docker/typo3:latest
+  CONTAINER_TAGGED_IMAGE: docker-registry.crynton.com/docker/typo3:$CI_COMMIT_REF_SLUG
 
 services:
   - docker:dind
@@ -49,14 +49,15 @@ release-latest:
   stage: release
   script:
     - docker pull $CONTAINER_TEST_IMAGE
-    - docker tag $CONTAINER_TEST_IMAGE $CONTAINER_RELEASE_IMAGE
-    - docker push $CONTAINER_RELEASE_IMAGE:latest
+    - docker tag $CONTAINER_TEST_IMAGE $CONTAINER_LATEST_IMAGE
+    - docker push $CONTAINER_LATEST_IMAGE
 
 release-tagged:
   stage: release
   script:
-    - docker pull $CONTAINER_RELEASE_IMAGE:latest
-    - docker push $CONTAINER_RELEASE_IMAGE:$CI_COMMIT_REF_SLUG
+    - docker pull $CONTAINER_LATEST_IMAGE
+    - docker tag $CONTAINER_LATEST_IMAGE $CONTAINER_TAGGED_IMAGE
+    - docker push $CONTAINER_TAGGED_IMAGE
   only:
     - branches
     - tags
@@ -76,10 +77,4 @@ push-on-github:
     - ssh-keyscan github.com >> ~/.ssh/known_hosts
     - git config --global user.name "Crynton Runner"
     - git config --global user.email "info@crynton.com"
-    - git fetch --prune
-    - git push --prune git@github.com:pascal20997/docker-typo3.git +refs/remotes/origin/*:refs/heads/* +refs/tags/*:refs/tags/*
-
-remove-test-image:
-  stage: clean
-  script:
-    - docker rmi $CONTAINER_TEST_IMAGE
+    - git push --mirror git@github.com:pascal20997/docker-typo3.git
