--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -77,5 +77,5 @@ push-on-github:
     - ssh-keyscan github.com >> ~/.ssh/known_hosts
     - git config --global user.name "Crynton Runner"
     - git config --global user.email "info@crynton.com"
-    - git fetch --prune
+    - git checkout $CI_COMMIT_REF_NAME
     - git push --mirror git@github.com:pascal20997/docker-typo3.git
