[FEATURE] Introduce feature to enable reverse proxy settings
This feature optimizes the usage of this container when using
a reverse proxy like traefik.

--- a/000-default.conf
+++ b/000-default.conf
@@ -10,6 +10,10 @@
                 AllowOverride All
                 Require all granted
         </Directory>
+
+        <If "env('REVERSE_PROXY_SETTINGS') == 'true'">
+                RemoteIPHeader X-Forwarded-For
+        </If>
 </VirtualHost>
 
 # vim: syntax=apache ts=4 sw=4 sts=4 sr noet
