--- a/data/apache-conf/reverse-proxy.conf
+++ b/data/apache-conf/reverse-proxy.conf
@@ -1,1 +1,4 @@
 RemoteIPHeader X-Forwarded-For
+
+# override log format to show the ip address of the user and not the proxy ip
+LogFormat "%a %l %u %t \"%r\" %>s %O \"%{Referer}i\" \"%{User-Agent}i\"" combined
